--- a/pj/WebContent/css/goods/goodscard.css
+++ b/pj/WebContent/css/goods/goodscard.css
@@ -27,6 +27,11 @@
 	font-weight: 500;
 	color: tomato;
 }
+.startLine-view{
+	margin:200px 0px;
+	border-top:2px dotted rgba(0,0,0,0.2);
+	border-bottom: 2px dotted rgba(0,0,0,0.2);
+}
 .modal-image__size{
 	width: 100%;
 }
