--- a/pj/WebContent/css/style.css
+++ b/pj/WebContent/css/style.css
@@ -9,6 +9,7 @@ font-family: 'Noto Sans KR', sans-serif;
 @import "controller.css";
 @import "com.css";
 @import "card.css";
+@import "today.css";
 
 /*goodsList.css*/
 
