프로젝트 작성 25일차

--- a/pj/WebContent/css/today/today.css
+++ b/pj/WebContent/css/today/today.css
@@ -29,3 +29,14 @@
 	top: -103px;
 	right: 0;
 }
+
+@media screen and (max-width:992px) {
+	.today__Range{
+		width: 100%;
+	}
+	.todayImagethumb {
+		width: 80px;
+		height: 50px;
+}
+	
+}
