--- a/pj/WebContent/css/goods/goodscard.css
+++ b/pj/WebContent/css/goods/goodscard.css
@@ -31,7 +31,7 @@
 .modal-image__size{
 	width: 100%;
 }
-.card__deck-size{
+.goods__card-size{
 	width: 33%;
 }
 .card-line{
@@ -42,3 +42,15 @@
 	top: 10px;
 	right: 10px;
 }
+
+@media screen and (min-width:512px) and (max-width:992px){
+	.goods__card-size{
+		width: 50%;
+	}
+}
+@media screen and (max-width:511px){
+	.goods__card-size{
+		width: 100%;
+	}
+}
+
