프로젝트 완성 후 관리자 페이지 반응형 화면 구현

--- a/pj/WebContent/css/admin/admin.css
+++ b/pj/WebContent/css/admin/admin.css
@@ -1,6 +1,9 @@
-.table__location{
-	margin-top:200px;
+.table__location {
+	margin-top: 200px;
+	width: 100%;
 }
-.password__size{
+
+.password__size {
 	width: 100px;
 }
+
